@@ -21,6 +21,7 @@ Changes are listed below, grouped under each point release of SuperCollider.
 * 2010-09-10 add method: Complex:abs to fit common usage - jr
 * 2010-09-11 bug in audio rate mapping fixed, when new source object was inserted in a mapped node proxy - jr
 * 2010-09-12 added Dwrand UGen - jr
+* 2010-09-15 SystemClock and TempoClock sched and schedAbs with inf time doesn't schedule the task in the first place - jr
 
 Bugfixes:
 ---------
